tests/ui/layout/enum-scalar-pair-int-ptr.stderr
error: backend_repr: ScalarPair { a: Initialized { value: Int(I?, false), valid_range: $VALID_RANGE }, b: Initialized { value: Pointer(AddressSpace(0)), valid_range: $VALID_RANGE }, b_offset: Size(? bytes) }
  --> $DIR/enum-scalar-pair-int-ptr.rs:13:1
   |
LL | enum ScalarPairPointerWithInt {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: backend_repr: Memory { sized: true }
  --> $DIR/enum-scalar-pair-int-ptr.rs:22:1
   |
LL | enum NotScalarPairPointerWithSmallerInt {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

